--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,23 @@
 html {
-    font-family: sans-serif
+    font-family: sans-serif;
+}
+
+header {
+    font-family: Courier, monospace;
+    font-size: larger;
+    text-align: center;
+    color: blueviolet;
+}
+
+main > section {
+    border-bottom: 1px solid #ccc;
+    padding: 32px 0 32px;
+}
+
+main > section > h2 {
+    font-size: 1.4em;
+    font-weight: 400;
+    color: grey;
 }
 
 .buttons {
